Starting work on the Powers page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 
 	<body>
 		<h3>Marvel Database</h3>
+		
+		<p>Welcome to the Marvel Cinematic Universe database!</p>
+
+		<p>Here you can store and edit information about the various heroes and villains of the MCU. Information on their abilities, weapons, home planets, and alignments are available for your perusal. Enjoy!</p>
+
 		<a href="/characters">Character Table</a><br>
 		<a href="/planets">Planet Table</a><br>
 		<a href="/powers">Powers Table</a><br>
