Adding some CSS for fun

--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,20 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Marvel Database</title>
+    	<link rel="stylesheet" href="mcudb_styling.css">
 	</head>
 
 	<body>
-		<h3>Marvel Database</h3>
+		<img src="https://i.imgur.com/AlYF6uj.png" style="display:block;margin:auto;" width=400px>
 		
-		<p>Welcome to the Marvel Cinematic Universe database!</p>
+		<div style="text-align:center;"><h4>Welcome to the Marvel Cinematic Universe database!</h4>
 
-		<p>Here you can store and edit information about the various heroes and villains of the MCU. Information on their abilities, weapons, home planets, and alignments are available for your perusal. Enjoy!</p>
+		<p>Here you can store and edit information about the various heroes and villains of the MCU.<br>Information on their abilities, weapons, home planets, and alignments are available for your perusal. Enjoy!</p>
 
 		<a href="/characters">Character Table</a><br>
 		<a href="/planets">Planet Table</a><br>
 		<a href="/powers">Powers Table</a><br>
 		<a href="/weapons">Weapons Table</a><br>
-		<a href="/realms">Realms Table</a><br>
+		<a href="/realms">Realms Table</a><br></div>
 	</body>
 </html>
